# Sonic_XRPL_Autotrader

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  Dockerfile  HARDENED_MARKET_DATA_AUDIT.md  PHASE_10_XRPL_CALIBRATION_AUDIT.md  PHASE_18_READONLY_INGESTION_AUDIT.md  PHASE_20_1_VALIDATION_HARDENING_AUDIT.md  PHASE_3_MARKET_DATA_AUDIT.md  PHASE_4_6_REALISM_HARDENING_AUDIT.md  PHASE_4_ALPHA_AUDIT.md  PHASE_5_PNL_ATTRIBUTION_AUDIT.md  PHASE_5_READINESS_AUDIT.md  PHASE_6_MICROSTRUCTURE_AUDIT.md  PHASE_7_5_CALIBRATION_AUDIT.md  PHASE_7_CALIBRATION_AUDIT.md  PHASE_8_VALIDATION_AUDIT.md  PHASE_9_LIVE_SHADOW_AUDIT.md  PNL_REALISM_AUDIT.md  PR_PHASE49_BODY.md  README.md  README_DEPLOYMENT.md  ROADMAP.md  SAFETY.md  SECURITY.md  XRPL_NOTES.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  strategy.py  trader.py  xrpl_client.py
artifacts/: audit_validator_report.json
dashboard/: __init__.py  app.py  artifacts.py  dashboard_entry.py  streamlit_app.py
data/: xrpl_replay_regression_snapshots.json  xrpl_replay_snapshots.json  xrpl_validation_regression_snapshots.json
deploy/: paper-runtime.env
docs/: AGENT_OPERATING_RULES.md  AGENT_WORKFLOW.md  AUDIT_VALIDATOR.md  CANONICAL_PATH_DECISION.md  CANONICAL_RUNTIME_OWNERSHIP_POLICY.md  CI_CD_SAFETY.md  ECC_ADOPTION_AUDIT.md  FIRSTLEDGER_FUTURE_INGESTION_POLICY.md  LIVE_READINESS_POLICY.md  LIVE_TRADING_READINESS_GATES.md  MIGRATION_READINESS_MATRIX.md  MIGRATION_SAFE_CONTROL_CHECKS.md  PAPER_AUTONOMY_TEST_PLAN.md  PAPER_RUNTIME_DEPLOYMENT_CHECKLIST.md  PHASE30_RECONCILIATION.md  PHASE31_CALIBRATION_RECOMMENDATIONS.md  PHASE33_DRIFT_INTELLIGENCE.md  PHASE34_XRPL_MEME_DISCOVERY.md  PHASE35_PAPER_REVIEW.md  PHASE36_7_DAY_PAPER_OPERATOR.md  PHASE37_STRATEGY_PERFORMANCE.md  PHASE38_RISK_GOVERNOR.md  PHASE39_CAMPAIGN_RUNNER_DASHBOARD.md  PHASE40_MARKET_FIXTURES.md  PHASE41_DATA_ADAPTERS.md  PHASE42_BACKTEST_DATASETS.md  PHASE46_PROVIDER_FIXTURES.md  (+59 more)
(+1823 files in other folders)
