[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-xrpl-autotrader"
version = "0.1.0"
description = "XRPL autotrader scaffold with app modules, dashboard, and tests"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Developer" }]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "streamlit>=1.35.0",
  "xrpl-py>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
autotrader = "app.main:main"
dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
include = ["app*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
