[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-xrpl-autotrader"
version = "0.1.0"
description = "Modular XRPL trading-system foundation with paper execution and safety controls"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Developer" }]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "sqlmodel>=0.0.22",
  "streamlit>=1.35.0",
  "GitPython>=3.1.49",
  "uvicorn>=0.30.0",
  "xrpl-py>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pip-audit>=2.7.0"
]

[project.scripts]
autotrader = "app.main:main"
dashboard = "dashboard.streamlit_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "dashboard*"]

[tool.setuptools.package-dir]
"sonic_xrpl" = "src/sonic_xrpl"

[tool.pytest.ini_options]
testpaths = ["tests", "execution_prototype/tests"]
pythonpath = [".", "src"]
addopts = "-q"
